# cw_fdm

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml
include/: continuous_handler.h  continuous_handler.hpp  cw.hpp  discreet_handler.h  discreet_handler.hpp  exception.hpp  handler.h  immutable_token.hpp  module.h  mutable_token.hpp  test_cw.hpp  variable.hpp  variables_database.hpp
spike/: CMakeLists.txt  boost_odeint_experiments.h  boost_odeint_experiments.ipynb  cw_notebook.hpp  qwert.cpp  std_any_experiments.hpp  std_any_experiments.ipynb
src/: continuous_handler.cpp  cw.cpp  discreet_handler.cpp  exception.cpp  fdm.rs  lib.rs  main.rs  states.rs  variables_database.cpp
tests/: CMakeLists.txt  cw.cpp  main.cpp  test_cw.cpp  test_factorial.cpp  test_variables_and_tokens.cpp
